package com.sudhanva.server2.Model;

import java.math.BigDecimal;
import java.util.Date;

import jakarta.persistence.Entity;
import jakarta.persistence.GeneratedValue;
import jakarta.persistence.GenerationType;
import jakarta.persistence.Id;
import jakarta.persistence.Lob;
import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;

@Entity
@Data
@NoArgsConstructor
@AllArgsConstructor
public class Product {
    
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    private String name;
    private String description;

    private String brand;
    private String catagory;
    private BigDecimal price;

    private Date releaseDate;
    private boolean productAvailable;
    private int stockQuantity;

    // Image
    private String imageName;
    private String imageType;
    @Lob
    private byte[] imageData;
    
}
